--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,12 +7,18 @@ jacoco {
 buildscript {
     repositories {
         mavenCentral()
-    }
+	      maven {
+	         url "https://plugins.gradle.org/m2/"
+	          }
 
+    }
     dependencies {
         classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
+        classpath 'com.browserstack.gradle:browserstack-gradle-plugin:2.3.2'
     }
 }
+
+apply plugin: "com.browserstack.gradle"
 
 android {
     compileSdkVersion 26
@@ -35,6 +41,14 @@ android {
             testCoverageEnabled true
         }
     }
+}
+
+browserStackConfig {
+    username = System.getenv("BROWSERSTACK_USERNAME")
+    accessKey = System.getenv("BROWSERSTACK_ACCESS_KEY")
+    devices = ['Samsung Galaxy S8-7.0']
+    enableSpoonFramework = true
+    networkLogs = true
 }
 
 dependencies {
